--- a/package.json
+++ b/package.json
@@ -9,7 +9,13 @@
     "build": "electron-builder",
     "test": "jest"
   },
-  "keywords": ["electron", "browser", "socket-agent", "llm", "ui-generation"],
+  "keywords": [
+    "electron",
+    "browser",
+    "socket-agent",
+    "llm",
+    "ui-generation"
+  ],
   "author": "Socket Agent Team",
   "license": "MIT",
   "devDependencies": {
@@ -18,7 +24,11 @@
     "jest": "^29.0.0"
   },
   "dependencies": {
-    "openai": "^4.20.0",
-    "axios": "^1.5.0"
+    "@solana/web3.js": "^1.98.4",
+    "axios": "^1.5.0",
+    "bip39": "^3.1.0",
+    "bs58": "^6.0.0",
+    "buffer": "^6.0.3",
+    "openai": "^4.20.0"
   }
 }
